[gd_scene load_steps=11 format=3 uid="uid://bd73qxxixfexl"]

[ext_resource type="Script" uid="uid://d3uiu55f62pa0" path="res://Scripts/Vistas/salones.gd" id="1_20cwc"]
[ext_resource type="PackedScene" uid="uid://d2lg7n0j8phb3" path="res://Scenes/Componentes/header.tscn" id="1_itrjw"]
[ext_resource type="PackedScene" uid="uid://cyx2rvgubown8" path="res://Scenes/Componentes/lateral_menu.tscn" id="2_dnu3u"]
[ext_resource type="PackedScene" uid="uid://clcmkgjftrhqq" path="res://Scenes/Componentes/panel.tscn" id="3_20cwc"]
[ext_resource type="Theme" uid="uid://ys5m5jo3mjhs" path="res://Sprites/Estilos/theme.tres" id="4_3dfiq"]
[ext_resource type="Theme" uid="uid://byuw71bepva6s" path="res://Sprites/Estilos/theme_ext.tres" id="5_g6nte"]
[ext_resource type="Texture2D" uid="uid://cxpf06getr8e8" path="res://Sprites/Referencias/wireframe_desktop.png" id="6_dnu3u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwinh"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wnrn"]
bg_color = Color(0.658824, 0.72549, 0.768627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uuio0"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.713726, 0.819608, 0.760784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Salones" type="Panel" groups=["vistas"]]
offset_right = 1142.0
offset_bottom = 602.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kwinh")
script = ExtResource("1_20cwc")
metadata/_edit_lock_ = true

[node name="Header" parent="." instance=ExtResource("1_itrjw")]
layout_mode = 0

[node name="LateralMenu" parent="." instance=ExtResource("2_dnu3u")]
layout_mode = 0
offset_top = 75.0
offset_bottom = 602.0

[node name="PanelFiltros" parent="." instance=ExtResource("3_20cwc")]
layout_mode = 0
offset_left = 196.0
offset_top = 90.0
offset_right = 1125.0
offset_bottom = 165.0

[node name="LinNombre" type="LineEdit" parent="PanelFiltros"]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 210.0
offset_bottom = 60.0
theme = ExtResource("4_3dfiq")
placeholder_text = "Ambiente"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="OptCentro" type="OptionButton" parent="PanelFiltros" groups=["opt_centros"]]
layout_mode = 0
offset_left = 374.0
offset_top = 16.0
offset_right = 511.0
offset_bottom = 61.0
focus_mode = 0
theme = ExtResource("5_g6nte")
alignment = 1
text_overrun_behavior = 3
metadata/_edit_lock_ = true

[node name="OptZona" type="OptionButton" parent="PanelFiltros" groups=["opt_zonas"]]
layout_mode = 0
offset_left = 225.0
offset_top = 16.0
offset_right = 361.0
offset_bottom = 61.0
focus_mode = 0
theme = ExtResource("5_g6nte")
alignment = 1
text_overrun_behavior = 3
metadata/_edit_lock_ = true

[node name="OptSede" type="OptionButton" parent="PanelFiltros" groups=["opt_sedes"]]
layout_mode = 0
offset_left = 525.0
offset_top = 16.0
offset_right = 661.0
offset_bottom = 61.0
focus_mode = 0
theme = ExtResource("5_g6nte")
alignment = 1
text_overrun_behavior = 3
metadata/_edit_lock_ = true

[node name="BtnBuscar" type="Button" parent="PanelFiltros"]
layout_mode = 0
offset_left = 675.0
offset_top = 14.0
offset_right = 780.0
offset_bottom = 59.0
focus_mode = 0
theme = ExtResource("4_3dfiq")
theme_override_styles/normal = SubResource("StyleBoxFlat_8wnrn")
text = "Buscar"
metadata/_edit_lock_ = true

[node name="BtnNuevo" type="Button" parent="PanelFiltros"]
layout_mode = 0
offset_left = 810.0
offset_top = 15.0
offset_right = 915.0
offset_bottom = 60.0
focus_mode = 0
theme = ExtResource("4_3dfiq")
text = "Nuevo"
metadata/_edit_lock_ = true

[node name="PanelTabla" parent="." instance=ExtResource("3_20cwc")]
layout_mode = 0
offset_left = 194.0
offset_top = 179.0
offset_right = 1129.0
offset_bottom = 588.0

[node name="Titulos" type="HBoxContainer" parent="PanelTabla"]
layout_mode = 2
offset_left = 6.0
offset_top = 7.0
offset_right = 926.0
offset_bottom = 40.0
alignment = 1
metadata/_edit_lock_ = true

[node name="TxtId" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_3dfiq")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "ID"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtSalon" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme = ExtResource("4_3dfiq")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "Ambiente"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtZona" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme = ExtResource("4_3dfiq")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "Zona"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtCentro" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource("4_3dfiq")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "Centro"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtSede" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource("4_3dfiq")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "Sede"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtOk" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_3dfiq")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "Ok"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Tabla" type="ScrollContainer" parent="PanelTabla"]
layout_mode = 0
offset_left = 7.0
offset_top = 43.0
offset_right = 926.0
offset_bottom = 401.0
metadata/_edit_lock_ = true

[node name="Registros" type="VBoxContainer" parent="PanelTabla/Tabla"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="SprMockups" type="Sprite2D" parent="." groups=["ocultable"]]
visible = false
self_modulate = Color(1, 1, 1, 0.486275)
position = Vector2(0, -1260)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_dnu3u")
centered = false
metadata/_edit_lock_ = true

[connection signal="pressed" from="PanelFiltros/BtnBuscar" to="." method="_on_btn_buscar_pressed"]
[connection signal="pressed" from="PanelFiltros/BtnNuevo" to="." method="_on_btn_nuevo_pressed"]
